--- a/cart.html
+++ b/cart.html
@@ -72,7 +72,7 @@
             </div>
             <!-- Quantity Incress and Decress Container-->
             <div> 
-              <button class="cart-btn">Add to Cart</button>
+              <button style="padding: 0 15px;" class="cart-btn">Add to Cart</button>
               <div class="quantity-controls">
                 <button class="quantity-btn lowCon"><span class="material-symbols-outlined">remove</span></button>
                 <input type="number" class="quantity-input" value="1" readonly>
@@ -84,8 +84,381 @@
       </tr>
       <!-- End of Product Box  -->
 
+            <!-- Product Box  -->
+            <tr>
+              <!-- Product Image Box -->
+              <td class="prodBox">
+                <img src="/images/2.jpg" alt="Product Image">
+              </td>
+              <td class="infBox">
+                <p>Leng Vishnje Frutti 1L</p>
+                <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
+                  <div>
+                    <span>100</span>
+                    <span>€</span>
+                  </div>
+                  <!-- Quantity Incress and Decress Container-->
+                  <div> 
+                    <button style="padding: 0 15px;" class="cart-btn">Add to Cart</button>
+                    <div class="quantity-controls">
+                      <button class="quantity-btn lowCon"><span class="material-symbols-outlined">remove</span></button>
+                      <input type="number" class="quantity-input" value="1" readonly>
+                      <button class="quantity-btn highCon"><span class="material-symbols-outlined">add</span></button>
+                    </div>
+                  </div>
+                </div>
+              </td>
+            </tr>
+            <!-- End of Product Box  -->
+
+                  <!-- Product Box  -->
+      <tr>
+        <!-- Product Image Box -->
+        <td class="prodBox">
+          <img src="/images/2.jpg" alt="Product Image">
+        </td>
+        <td class="infBox">
+          <p>Leng Vishnje Frutti 1L</p>
+          <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
+            <div>
+              <span>100</span>
+              <span>€</span>
+            </div>
+            <!-- Quantity Incress and Decress Container-->
+            <div> 
+              <button style="padding: 0 15px;" class="cart-btn">Add to Cart</button>
+              <div class="quantity-controls">
+                <button class="quantity-btn lowCon"><span class="material-symbols-outlined">remove</span></button>
+                <input type="number" class="quantity-input" value="1" readonly>
+                <button class="quantity-btn highCon"><span class="material-symbols-outlined">add</span></button>
+              </div>
+            </div>
+          </div>
+        </td>
+      </tr>
+      <!-- End of Product Box  -->
+
+            <!-- Product Box  -->
+            <tr>
+              <!-- Product Image Box -->
+              <td class="prodBox">
+                <img src="/images/2.jpg" alt="Product Image">
+              </td>
+              <td class="infBox">
+                <p>Leng Vishnje Frutti 1L</p>
+                <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
+                  <div>
+                    <span>100</span>
+                    <span>€</span>
+                  </div>
+                  <!-- Quantity Incress and Decress Container-->
+                  <div> 
+                    <button style="padding: 0 15px;" class="cart-btn">Add to Cart</button>
+                    <div class="quantity-controls">
+                      <button class="quantity-btn lowCon"><span class="material-symbols-outlined">remove</span></button>
+                      <input type="number" class="quantity-input" value="1" readonly>
+                      <button class="quantity-btn highCon"><span class="material-symbols-outlined">add</span></button>
+                    </div>
+                  </div>
+                </div>
+              </td>
+            </tr>
+            <!-- End of Product Box  -->
+
+                  <!-- Product Box  -->
+      <tr>
+        <!-- Product Image Box -->
+        <td class="prodBox">
+          <img src="/images/2.jpg" alt="Product Image">
+        </td>
+        <td class="infBox">
+          <p>Leng Vishnje Frutti 1L</p>
+          <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
+            <div>
+              <span>100</span>
+              <span>€</span>
+            </div>
+            <!-- Quantity Incress and Decress Container-->
+            <div> 
+              <button style="padding: 0 15px;" class="cart-btn">Add to Cart</button>
+              <div class="quantity-controls">
+                <button class="quantity-btn lowCon"><span class="material-symbols-outlined">remove</span></button>
+                <input type="number" class="quantity-input" value="1" readonly>
+                <button class="quantity-btn highCon"><span class="material-symbols-outlined">add</span></button>
+              </div>
+            </div>
+          </div>
+        </td>
+      </tr>
+      <!-- End of Product Box  -->
+
+            <!-- Product Box  -->
+            <tr>
+              <!-- Product Image Box -->
+              <td class="prodBox">
+                <img src="/images/2.jpg" alt="Product Image">
+              </td>
+              <td class="infBox">
+                <p>Leng Vishnje Frutti 1L</p>
+                <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
+                  <div>
+                    <span>100</span>
+                    <span>€</span>
+                  </div>
+                  <!-- Quantity Incress and Decress Container-->
+                  <div> 
+                    <button style="padding: 0 15px;" class="cart-btn">Add to Cart</button>
+                    <div class="quantity-controls">
+                      <button class="quantity-btn lowCon"><span class="material-symbols-outlined">remove</span></button>
+                      <input type="number" class="quantity-input" value="1" readonly>
+                      <button class="quantity-btn highCon"><span class="material-symbols-outlined">add</span></button>
+                    </div>
+                  </div>
+                </div>
+              </td>
+            </tr>
+            <!-- End of Product Box  -->
+
+                  <!-- Product Box  -->
+      <tr>
+        <!-- Product Image Box -->
+        <td class="prodBox">
+          <img src="/images/2.jpg" alt="Product Image">
+        </td>
+        <td class="infBox">
+          <p>Leng Vishnje Frutti 1L</p>
+          <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
+            <div>
+              <span>100</span>
+              <span>€</span>
+            </div>
+            <!-- Quantity Incress and Decress Container-->
+            <div> 
+              <button style="padding: 0 15px;" class="cart-btn">Add to Cart</button>
+              <div class="quantity-controls">
+                <button class="quantity-btn lowCon"><span class="material-symbols-outlined">remove</span></button>
+                <input type="number" class="quantity-input" value="1" readonly>
+                <button class="quantity-btn highCon"><span class="material-symbols-outlined">add</span></button>
+              </div>
+            </div>
+          </div>
+        </td>
+      </tr>
+      <!-- End of Product Box  -->
+
+            <!-- Product Box  -->
+            <tr>
+              <!-- Product Image Box -->
+              <td class="prodBox">
+                <img src="/images/2.jpg" alt="Product Image">
+              </td>
+              <td class="infBox">
+                <p>Leng Vishnje Frutti 1L</p>
+                <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
+                  <div>
+                    <span>100</span>
+                    <span>€</span>
+                  </div>
+                  <!-- Quantity Incress and Decress Container-->
+                  <div> 
+                    <button style="padding: 0 15px;" class="cart-btn">Add to Cart</button>
+                    <div class="quantity-controls">
+                      <button class="quantity-btn lowCon"><span class="material-symbols-outlined">remove</span></button>
+                      <input type="number" class="quantity-input" value="1" readonly>
+                      <button class="quantity-btn highCon"><span class="material-symbols-outlined">add</span></button>
+                    </div>
+                  </div>
+                </div>
+              </td>
+            </tr>
+            <!-- End of Product Box  -->
+
+                  <!-- Product Box  -->
+      <tr>
+        <!-- Product Image Box -->
+        <td class="prodBox">
+          <img src="/images/2.jpg" alt="Product Image">
+        </td>
+        <td class="infBox">
+          <p>Leng Vishnje Frutti 1L</p>
+          <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
+            <div>
+              <span>100</span>
+              <span>€</span>
+            </div>
+            <!-- Quantity Incress and Decress Container-->
+            <div> 
+              <button style="padding: 0 15px;" class="cart-btn">Add to Cart</button>
+              <div class="quantity-controls">
+                <button class="quantity-btn lowCon"><span class="material-symbols-outlined">remove</span></button>
+                <input type="number" class="quantity-input" value="1" readonly>
+                <button class="quantity-btn highCon"><span class="material-symbols-outlined">add</span></button>
+              </div>
+            </div>
+          </div>
+        </td>
+      </tr>
+      <!-- End of Product Box  -->
+
+            <!-- Product Box  -->
+            <tr>
+              <!-- Product Image Box -->
+              <td class="prodBox">
+                <img src="/images/2.jpg" alt="Product Image">
+              </td>
+              <td class="infBox">
+                <p>Leng Vishnje Frutti 1L</p>
+                <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
+                  <div>
+                    <span>100</span>
+                    <span>€</span>
+                  </div>
+                  <!-- Quantity Incress and Decress Container-->
+                  <div> 
+                    <button style="padding: 0 15px;" class="cart-btn">Add to Cart</button>
+                    <div class="quantity-controls">
+                      <button class="quantity-btn lowCon"><span class="material-symbols-outlined">remove</span></button>
+                      <input type="number" class="quantity-input" value="1" readonly>
+                      <button class="quantity-btn highCon"><span class="material-symbols-outlined">add</span></button>
+                    </div>
+                  </div>
+                </div>
+              </td>
+            </tr>
+            <!-- End of Product Box  -->
+
+                  <!-- Product Box  -->
+      <tr>
+        <!-- Product Image Box -->
+        <td class="prodBox">
+          <img src="/images/2.jpg" alt="Product Image">
+        </td>
+        <td class="infBox">
+          <p>Leng Vishnje Frutti 1L</p>
+          <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
+            <div>
+              <span>100</span>
+              <span>€</span>
+            </div>
+            <!-- Quantity Incress and Decress Container-->
+            <div> 
+              <button style="padding: 0 15px;" class="cart-btn">Add to Cart</button>
+              <div class="quantity-controls">
+                <button class="quantity-btn lowCon"><span class="material-symbols-outlined">remove</span></button>
+                <input type="number" class="quantity-input" value="1" readonly>
+                <button class="quantity-btn highCon"><span class="material-symbols-outlined">add</span></button>
+              </div>
+            </div>
+          </div>
+        </td>
+      </tr>
+      <!-- End of Product Box  -->
+
+            <!-- Product Box  -->
+            <tr>
+              <!-- Product Image Box -->
+              <td class="prodBox">
+                <img src="/images/2.jpg" alt="Product Image">
+              </td>
+              <td class="infBox">
+                <p>Leng Vishnje Frutti 1L</p>
+                <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
+                  <div>
+                    <span>100</span>
+                    <span>€</span>
+                  </div>
+                  <!-- Quantity Incress and Decress Container-->
+                  <div> 
+                    <button style="padding: 0 15px;" class="cart-btn">Add to Cart</button>
+                    <div class="quantity-controls">
+                      <button class="quantity-btn lowCon"><span class="material-symbols-outlined">remove</span></button>
+                      <input type="number" class="quantity-input" value="1" readonly>
+                      <button class="quantity-btn highCon"><span class="material-symbols-outlined">add</span></button>
+                    </div>
+                  </div>
+                </div>
+              </td>
+            </tr>
+            <!-- End of Product Box  -->
+
+                  <!-- Product Box  -->
+      <tr>
+        <!-- Product Image Box -->
+        <td class="prodBox">
+          <img src="/images/2.jpg" alt="Product Image">
+        </td>
+        <td class="infBox">
+          <p>Leng Vishnje Frutti 1L</p>
+          <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
+            <div>
+              <span>100</span>
+              <span>€</span>
+            </div>
+            <!-- Quantity Incress and Decress Container-->
+            <div> 
+              <button style="padding: 0 15px;" class="cart-btn">Add to Cart</button>
+              <div class="quantity-controls">
+                <button class="quantity-btn lowCon"><span class="material-symbols-outlined">remove</span></button>
+                <input type="number" class="quantity-input" value="1" readonly>
+                <button class="quantity-btn highCon"><span class="material-symbols-outlined">add</span></button>
+              </div>
+            </div>
+          </div>
+        </td>
+      </tr>
+      <!-- End of Product Box  -->
+
+            <!-- Product Box  -->
+            <tr>
+              <!-- Product Image Box -->
+              <td class="prodBox">
+                <img src="/images/2.jpg" alt="Product Image">
+              </td>
+              <td class="infBox">
+                <p>Leng Vishnje Frutti 1L</p>
+                <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
+                  <div>
+                    <span>100</span>
+                    <span>€</span>
+                  </div>
+                  <!-- Quantity Incress and Decress Container-->
+                  <div> 
+                    <button style="padding: 0 15px;" class="cart-btn">Add to Cart</button>
+                    <div class="quantity-controls">
+                      <button class="quantity-btn lowCon"><span class="material-symbols-outlined">remove</span></button>
+                      <input type="number" class="quantity-input" value="1" readonly>
+                      <button class="quantity-btn highCon"><span class="material-symbols-outlined">add</span></button>
+                    </div>
+                  </div>
+                </div>
+              </td>
+            </tr>
+            <!-- End of Product Box  -->
+
     </tbody>
   </table>
+
+  <!-- Cart Footer Sticky -->
+  <footer>
+    <div class="footerSection">
+      <div style="display: flex; flex-direction: column;">
+        <div class="flex-alg-center" style="justify-content: space-between;">
+          <span>Tarifa e transportit:</span>
+          <span>0.00 Euro</span>
+        </div>
+        <div class="flex-alg-center" style="justify-content: space-between;">
+          <span>totali i produkteve:</span>
+          <span>100.00 Euro</span>
+        </div>
+      </div>
+      <div class="flex-alg-center" style="justify-content: space-between;">
+        <h4>Totali: 100€</h4>
+        <button class="cart-btn">Share List</button>
+      </div>
+    </div>
+  </footer>
+
+  <!-- End of Cart Footer Sticky -->
 
 
 
