--- a/cart.html
+++ b/cart.html
@@ -439,22 +439,20 @@
   </table>
 
   <!-- Cart Footer Sticky -->
-  <footer>
-    <div class="footerSection">
-      <div style="display: flex; flex-direction: column;">
-        <div class="flex-alg-center" style="justify-content: space-between;">
-          <span>Tarifa e transportit:</span>
-          <span>0.00 Euro</span>
-        </div>
-        <div class="flex-alg-center" style="justify-content: space-between;">
-          <span>totali i produkteve:</span>
-          <span>100.00 Euro</span>
-        </div>
+  <footer class="footerSection">
+    <div style="display: flex; flex-direction: column;">
+      <div class="flex-alg-center" style="justify-content: space-between;">
+        <span>Tarifa e transportit:</span>
+        <span>0.00 Euro</span>
       </div>
       <div class="flex-alg-center" style="justify-content: space-between;">
-        <h4>Totali: 100€</h4>
-        <button class="cart-btn">Share List</button>
+        <span>totali i produkteve:</span>
+        <span>100.00 Euro</span>
       </div>
+    </div>
+    <div class="flex-alg-center" style="justify-content: space-between;">
+      <h4>Totali: 100€</h4>
+      <button class="cart-btn">Share List</button>
     </div>
   </footer>
 
