--- a/cart.html
+++ b/cart.html
@@ -34,23 +34,12 @@
 
   <header>
     <div class="flex-alg-center cartHeader">
-      <div class="flex-alg-center">
-        <a href="/index.html">
-          <button class="bckCartbtn">
-            <span class="material-symbols-outlined admin-panel footer-icon">arrow_back</span>
-            <span>Continue Shopping</span>
-          </button>
-        </a>
-      </div>
-      <div class="flex-alg-center">
-        <a href = "/cart.html"><button><span class="material-symbols-outlined footer-icon btn-pad">shopping_cart</span></button></a>
-        <button><span class="material-symbols-outlined admin-panel footer-icon btn-pad" id="toggleButton">account_circle</span></button>
-        <button><span class="material-symbols-outlined user-panel footer-icon btn-pad open-modal-btn" data-target="#modal9">login</span></button>
-      </div>
-      <div id="buttonsContainer" class="admin-panel">
-        <button class="open-modal-btn" data-target="#modal2">Settings</button>
-        <button class="open-modal-btn" data-target="#modal11">Logout</button>
-      </div>
+      <a href="/index.html">
+        <button>
+          <span class="material-symbols-outlined btn-pad footer-icon">arrow_back</span>
+        </button>
+      </a>
+      <span class="bckCartbtn btn-pad">Favorite List</span>
     </div>
   </header>
 
@@ -71,369 +60,16 @@
               <span>€</span>
             </div>
             <!-- Quantity Incress and Decress Container-->
-            <div> 
-              <button style="padding: 0 15px;" class="cart-btn">Add to Cart</button>
-              <div class="quantity-controls">
-                <button class="quantity-btn lowCon"><span class="material-symbols-outlined">remove</span></button>
-                <input type="number" class="quantity-input" value="1" readonly>
-                <button class="quantity-btn highCon"><span class="material-symbols-outlined">add</span></button>
-              </div>
+            <div style="display: flex;align-items: center;">
+              <button class="quantity-btn lowCon">&#8722;</button>
+              <input type="number" class="quantity-input" value="1">
+              <button class="quantity-btn highCon">&#x2b;</button>
             </div>
           </div>
         </td>
       </tr>
       <!-- End of Product Box  -->
 
-            <!-- Product Box  -->
-            <tr>
-              <!-- Product Image Box -->
-              <td class="prodBox">
-                <img src="/images/2.jpg" alt="Product Image">
-              </td>
-              <td class="infBox">
-                <p>Leng Vishnje Frutti 1L</p>
-                <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
-                  <div>
-                    <span>100</span>
-                    <span>€</span>
-                  </div>
-                  <!-- Quantity Incress and Decress Container-->
-                  <div> 
-                    <button style="padding: 0 15px;" class="cart-btn">Add to Cart</button>
-                    <div class="quantity-controls">
-                      <button class="quantity-btn lowCon"><span class="material-symbols-outlined">remove</span></button>
-                      <input type="number" class="quantity-input" value="1" readonly>
-                      <button class="quantity-btn highCon"><span class="material-symbols-outlined">add</span></button>
-                    </div>
-                  </div>
-                </div>
-              </td>
-            </tr>
-            <!-- End of Product Box  -->
-
-                  <!-- Product Box  -->
-      <tr>
-        <!-- Product Image Box -->
-        <td class="prodBox">
-          <img src="/images/2.jpg" alt="Product Image">
-        </td>
-        <td class="infBox">
-          <p>Leng Vishnje Frutti 1L</p>
-          <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
-            <div>
-              <span>100</span>
-              <span>€</span>
-            </div>
-            <!-- Quantity Incress and Decress Container-->
-            <div> 
-              <button style="padding: 0 15px;" class="cart-btn">Add to Cart</button>
-              <div class="quantity-controls">
-                <button class="quantity-btn lowCon"><span class="material-symbols-outlined">remove</span></button>
-                <input type="number" class="quantity-input" value="1" readonly>
-                <button class="quantity-btn highCon"><span class="material-symbols-outlined">add</span></button>
-              </div>
-            </div>
-          </div>
-        </td>
-      </tr>
-      <!-- End of Product Box  -->
-
-            <!-- Product Box  -->
-            <tr>
-              <!-- Product Image Box -->
-              <td class="prodBox">
-                <img src="/images/2.jpg" alt="Product Image">
-              </td>
-              <td class="infBox">
-                <p>Leng Vishnje Frutti 1L</p>
-                <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
-                  <div>
-                    <span>100</span>
-                    <span>€</span>
-                  </div>
-                  <!-- Quantity Incress and Decress Container-->
-                  <div> 
-                    <button style="padding: 0 15px;" class="cart-btn">Add to Cart</button>
-                    <div class="quantity-controls">
-                      <button class="quantity-btn lowCon"><span class="material-symbols-outlined">remove</span></button>
-                      <input type="number" class="quantity-input" value="1" readonly>
-                      <button class="quantity-btn highCon"><span class="material-symbols-outlined">add</span></button>
-                    </div>
-                  </div>
-                </div>
-              </td>
-            </tr>
-            <!-- End of Product Box  -->
-
-                  <!-- Product Box  -->
-      <tr>
-        <!-- Product Image Box -->
-        <td class="prodBox">
-          <img src="/images/2.jpg" alt="Product Image">
-        </td>
-        <td class="infBox">
-          <p>Leng Vishnje Frutti 1L</p>
-          <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
-            <div>
-              <span>100</span>
-              <span>€</span>
-            </div>
-            <!-- Quantity Incress and Decress Container-->
-            <div> 
-              <button style="padding: 0 15px;" class="cart-btn">Add to Cart</button>
-              <div class="quantity-controls">
-                <button class="quantity-btn lowCon"><span class="material-symbols-outlined">remove</span></button>
-                <input type="number" class="quantity-input" value="1" readonly>
-                <button class="quantity-btn highCon"><span class="material-symbols-outlined">add</span></button>
-              </div>
-            </div>
-          </div>
-        </td>
-      </tr>
-      <!-- End of Product Box  -->
-
-            <!-- Product Box  -->
-            <tr>
-              <!-- Product Image Box -->
-              <td class="prodBox">
-                <img src="/images/2.jpg" alt="Product Image">
-              </td>
-              <td class="infBox">
-                <p>Leng Vishnje Frutti 1L</p>
-                <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
-                  <div>
-                    <span>100</span>
-                    <span>€</span>
-                  </div>
-                  <!-- Quantity Incress and Decress Container-->
-                  <div> 
-                    <button style="padding: 0 15px;" class="cart-btn">Add to Cart</button>
-                    <div class="quantity-controls">
-                      <button class="quantity-btn lowCon"><span class="material-symbols-outlined">remove</span></button>
-                      <input type="number" class="quantity-input" value="1" readonly>
-                      <button class="quantity-btn highCon"><span class="material-symbols-outlined">add</span></button>
-                    </div>
-                  </div>
-                </div>
-              </td>
-            </tr>
-            <!-- End of Product Box  -->
-
-                  <!-- Product Box  -->
-      <tr>
-        <!-- Product Image Box -->
-        <td class="prodBox">
-          <img src="/images/2.jpg" alt="Product Image">
-        </td>
-        <td class="infBox">
-          <p>Leng Vishnje Frutti 1L</p>
-          <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
-            <div>
-              <span>100</span>
-              <span>€</span>
-            </div>
-            <!-- Quantity Incress and Decress Container-->
-            <div> 
-              <button style="padding: 0 15px;" class="cart-btn">Add to Cart</button>
-              <div class="quantity-controls">
-                <button class="quantity-btn lowCon"><span class="material-symbols-outlined">remove</span></button>
-                <input type="number" class="quantity-input" value="1" readonly>
-                <button class="quantity-btn highCon"><span class="material-symbols-outlined">add</span></button>
-              </div>
-            </div>
-          </div>
-        </td>
-      </tr>
-      <!-- End of Product Box  -->
-
-            <!-- Product Box  -->
-            <tr>
-              <!-- Product Image Box -->
-              <td class="prodBox">
-                <img src="/images/2.jpg" alt="Product Image">
-              </td>
-              <td class="infBox">
-                <p>Leng Vishnje Frutti 1L</p>
-                <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
-                  <div>
-                    <span>100</span>
-                    <span>€</span>
-                  </div>
-                  <!-- Quantity Incress and Decress Container-->
-                  <div> 
-                    <button style="padding: 0 15px;" class="cart-btn">Add to Cart</button>
-                    <div class="quantity-controls">
-                      <button class="quantity-btn lowCon"><span class="material-symbols-outlined">remove</span></button>
-                      <input type="number" class="quantity-input" value="1" readonly>
-                      <button class="quantity-btn highCon"><span class="material-symbols-outlined">add</span></button>
-                    </div>
-                  </div>
-                </div>
-              </td>
-            </tr>
-            <!-- End of Product Box  -->
-
-                  <!-- Product Box  -->
-      <tr>
-        <!-- Product Image Box -->
-        <td class="prodBox">
-          <img src="/images/2.jpg" alt="Product Image">
-        </td>
-        <td class="infBox">
-          <p>Leng Vishnje Frutti 1L</p>
-          <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
-            <div>
-              <span>100</span>
-              <span>€</span>
-            </div>
-            <!-- Quantity Incress and Decress Container-->
-            <div> 
-              <button style="padding: 0 15px;" class="cart-btn">Add to Cart</button>
-              <div class="quantity-controls">
-                <button class="quantity-btn lowCon"><span class="material-symbols-outlined">remove</span></button>
-                <input type="number" class="quantity-input" value="1" readonly>
-                <button class="quantity-btn highCon"><span class="material-symbols-outlined">add</span></button>
-              </div>
-            </div>
-          </div>
-        </td>
-      </tr>
-      <!-- End of Product Box  -->
-
-            <!-- Product Box  -->
-            <tr>
-              <!-- Product Image Box -->
-              <td class="prodBox">
-                <img src="/images/2.jpg" alt="Product Image">
-              </td>
-              <td class="infBox">
-                <p>Leng Vishnje Frutti 1L</p>
-                <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
-                  <div>
-                    <span>100</span>
-                    <span>€</span>
-                  </div>
-                  <!-- Quantity Incress and Decress Container-->
-                  <div> 
-                    <button style="padding: 0 15px;" class="cart-btn">Add to Cart</button>
-                    <div class="quantity-controls">
-                      <button class="quantity-btn lowCon"><span class="material-symbols-outlined">remove</span></button>
-                      <input type="number" class="quantity-input" value="1" readonly>
-                      <button class="quantity-btn highCon"><span class="material-symbols-outlined">add</span></button>
-                    </div>
-                  </div>
-                </div>
-              </td>
-            </tr>
-            <!-- End of Product Box  -->
-
-                  <!-- Product Box  -->
-      <tr>
-        <!-- Product Image Box -->
-        <td class="prodBox">
-          <img src="/images/2.jpg" alt="Product Image">
-        </td>
-        <td class="infBox">
-          <p>Leng Vishnje Frutti 1L</p>
-          <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
-            <div>
-              <span>100</span>
-              <span>€</span>
-            </div>
-            <!-- Quantity Incress and Decress Container-->
-            <div> 
-              <button style="padding: 0 15px;" class="cart-btn">Add to Cart</button>
-              <div class="quantity-controls">
-                <button class="quantity-btn lowCon"><span class="material-symbols-outlined">remove</span></button>
-                <input type="number" class="quantity-input" value="1" readonly>
-                <button class="quantity-btn highCon"><span class="material-symbols-outlined">add</span></button>
-              </div>
-            </div>
-          </div>
-        </td>
-      </tr>
-      <!-- End of Product Box  -->
-
-            <!-- Product Box  -->
-            <tr>
-              <!-- Product Image Box -->
-              <td class="prodBox">
-                <img src="/images/2.jpg" alt="Product Image">
-              </td>
-              <td class="infBox">
-                <p>Leng Vishnje Frutti 1L</p>
-                <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
-                  <div>
-                    <span>100</span>
-                    <span>€</span>
-                  </div>
-                  <!-- Quantity Incress and Decress Container-->
-                  <div> 
-                    <button style="padding: 0 15px;" class="cart-btn">Add to Cart</button>
-                    <div class="quantity-controls">
-                      <button class="quantity-btn lowCon"><span class="material-symbols-outlined">remove</span></button>
-                      <input type="number" class="quantity-input" value="1" readonly>
-                      <button class="quantity-btn highCon"><span class="material-symbols-outlined">add</span></button>
-                    </div>
-                  </div>
-                </div>
-              </td>
-            </tr>
-            <!-- End of Product Box  -->
-
-                  <!-- Product Box  -->
-      <tr>
-        <!-- Product Image Box -->
-        <td class="prodBox">
-          <img src="/images/2.jpg" alt="Product Image">
-        </td>
-        <td class="infBox">
-          <p>Leng Vishnje Frutti 1L</p>
-          <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
-            <div>
-              <span>100</span>
-              <span>€</span>
-            </div>
-            <!-- Quantity Incress and Decress Container-->
-            <div> 
-              <button style="padding: 0 15px;" class="cart-btn">Add to Cart</button>
-              <div class="quantity-controls">
-                <button class="quantity-btn lowCon"><span class="material-symbols-outlined">remove</span></button>
-                <input type="number" class="quantity-input" value="1" readonly>
-                <button class="quantity-btn highCon"><span class="material-symbols-outlined">add</span></button>
-              </div>
-            </div>
-          </div>
-        </td>
-      </tr>
-      <!-- End of Product Box  -->
-
-            <!-- Product Box  -->
-            <tr>
-              <!-- Product Image Box -->
-              <td class="prodBox">
-                <img src="/images/2.jpg" alt="Product Image">
-              </td>
-              <td class="infBox">
-                <p>Leng Vishnje Frutti 1L</p>
-                <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
-                  <div>
-                    <span>100</span>
-                    <span>€</span>
-                  </div>
-                  <!-- Quantity Incress and Decress Container-->
-                  <div> 
-                    <button style="padding: 0 15px;" class="cart-btn">Add to Cart</button>
-                    <div class="quantity-controls">
-                      <button class="quantity-btn lowCon"><span class="material-symbols-outlined">remove</span></button>
-                      <input type="number" class="quantity-input" value="1" readonly>
-                      <button class="quantity-btn highCon"><span class="material-symbols-outlined">add</span></button>
-                    </div>
-                  </div>
-                </div>
-              </td>
-            </tr>
-            <!-- End of Product Box  -->
 
     </tbody>
   </table>
