--- a/cart.html
+++ b/cart.html
@@ -53,9 +53,9 @@
           <img src="/images/2.jpg" alt="Product Image">
         </td>
         <td class="infBox">
-          <p>Leng Vishnje Frutti 1L</p>
+          <p class="infTitle">Leng Vishnje Frutti 1L asdasd qweq weq qweqweqwe qasdasdsd qwe qweqw easdasd qeqweq weq weqweqw qweqweqw sdsdfsdf wqerwerqeqwe </p>
           <div style="display: flex;align-items: center; justify-content: space-between;width: 100%;">
-            <div>
+            <div class="infPrice">
               <span>100</span>
               <span>€</span>
             </div>
